2011-04-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c (msdos_getch, readline), src/win/winmain.c 
	(ConsoleGetch): Don't quit on DEL on an empty line. Map DEL key to del
	character 127 instead of ^D, but keep old behaviour of deleting current
	character on platforms Windows, MSDOS and OS/2. SF Bug #3285571

2011-04-13  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua:  Fix "charsize" option.

2011-04-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/gd.trm term/svg.trm term/x11.trm src/misc.c:
	Stricter checks that the red component of RGB colors stays in range.

2011-04-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WndGraphProc), src/win/wtext.c (WndTextProc):
	Enable access to popup menu via status bar and keyboard.

2011-04-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c (WndParentProc) [WM_SIZE]: Ignore requests to set 
	window size to 0,0. Fixes crash on Vista if Windows-D is pressed.

2011-04-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_common.js: Fix the clipping of filled rectangles
	when zoomed.

2011-04-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/config/mingw/Makefile: Fixed relative directories in RCFLAGS.

2011-04-10  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/term/win.trm, src/win/wgraph.c, src/win/wgnuplib.h: Renew text
	handling: Process enhanced text in drawgraph(), new functions
	GraphEnhancedOpen(), GraphEnhancedFlush(), revised GraphGetTextLength().
	This most notably fixes behaviour when resizing the graph window. Collect
	static variables used for the internal state of enhanced text processing
	into a struct. Move code out of main loop of drawgraph: New functions
	draw_put_text(), draw_text_justify(), draw_enhanced_text(). Fix baseline
	alignment of normal and enhanced text. Text position was moving in wrong
	direction for rotated enhanced text (fix replaces change dated 